@@ -1,3 +1,8 @@
+2004-06-23  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/opt.c (opt_args) : Do not abort when none of the 
+	hosts in exclude_buf (i.e. -x) match the current wcoll.
+
 2004-06-09  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/pdsh/dsh.c (_dsh_attr_init) : Added function to initialize
